--- a/index.html
+++ b/index.html
@@ -143,10 +143,13 @@
         
         .summary-item.total {
             font-weight: bold;
-            font-size: 1.1em;
-            margin-top: 10px;
-            padding-top: 10px;
-            border-top: 1px solid var(--border-color);
+            font-size: 1.3em;
+            margin-top: 15px;
+            padding: 15px;
+            border-radius: 5px;
+            background-color: var(--orange);
+            color: white;
+            border-top: none;
         }
         
         .button {
@@ -224,7 +227,7 @@
                     <span id="discountInfo">$0.00 (0%)</span>
                 </div>
                 <div class="summary-item total">
-                    <span>Total Refund:</span>
+                    <span>TOTAL REFUND:</span>
                     <span id="totalRefund">$0.00</span>
                 </div>
             </div>
