--- a/index.html
+++ b/index.html
@@ -30,24 +30,17 @@
       width: 100%;
       border-collapse: collapse;
       margin-bottom: 20px;
-      table-layout: fixed;
     }
     th, td {
       border: 1px solid #444;
-      padding: 6px 4px;
+      padding: 5px;
       text-align: center;
-      font-size: 0.9em;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
     }
-    th {
-      background-color: #ff5722;
-      color: #fff;
+    th.description-col, td.description-col {
+      width: 30%;
     }
-    td:nth-child(2) {
-      white-space: normal;
-      word-break: break-word;
+    th:not(.description-col), td:not(.description-col) {
+      width: calc(70% / 6);
     }
     input[type="number"] {
       width: 60px;
@@ -73,6 +66,9 @@
       align-items: center;
       margin-bottom: 20px;
       gap: 10px;
+    }
+    .controls.visible {
+      display: flex;
     }
     .kit-price-input {
       flex-grow: 1;
@@ -100,7 +96,7 @@
   <h1>Refunds Calculator</h1>
 
   <textarea id="kitInput" placeholder="Paste your kit component list here..."></textarea>
-  <div class="controls" id="controlsPanel">
+  <div class="controls" id="controls">
     <div class="kit-price-input">
       <input type="number" id="kitPrice" placeholder="Enter full kit price ($)">
     </div>
@@ -112,7 +108,6 @@
 
   <script>
     const knownSingleItems = ["brake pads", "brake rotors"];
-    const controlsPanel = document.getElementById("controlsPanel");
 
     document.getElementById("kitInput").addEventListener("input", () => {
       processInput();
@@ -146,12 +141,8 @@
           currentParts.push({ qty, desc, partNum, price: 0, returned: 0 });
         }
       });
-      if (currentParts.length > 0) {
-        controlsPanel.style.display = "flex";
-      } else {
-        controlsPanel.style.display = "none";
-      }
       renderTable(currentParts);
+      document.getElementById("controls").classList.toggle("visible", currentParts.length > 0);
     }
 
     function renderTable(parts) {
@@ -160,7 +151,7 @@
           <thead>
             <tr>
               <th>Qty</th>
-              <th>Description</th>
+              <th class="description-col">Description</th>
               <th>Part #</th>
               <th>Unit Price ($)</th>
               <th>Returned Qty</th>
@@ -175,7 +166,7 @@
         tableHTML += `
           <tr>
             <td><input type="number" value="${part.qty}" onchange="update(${index})" id="qty-${index}"></td>
-            <td>${part.desc}</td>
+            <td class="description-col">${part.desc}</td>
             <td>${part.partNum}</td>
             <td><input type="number" placeholder="0" onchange="update(${index})" id="price-${index}"></td>
             <td><input type="number" placeholder="0" onchange="update(${index})" id="returned-${index}"></td>
@@ -239,7 +230,7 @@
       document.getElementById("kitPrice").value = "";
       document.getElementById("tableContainer").innerHTML = "";
       document.getElementById("refundTotal").textContent = "";
-      controlsPanel.style.display = "none";
+      document.getElementById("controls").classList.remove("visible");
     }
   </script>
 </body>
