--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Refunds Calculator</title>
   <style>
     body {
@@ -30,20 +30,19 @@
       width: 100%;
       border-collapse: collapse;
       margin-bottom: 20px;
+      table-layout: auto;
     }
     th, td {
       border: 1px solid #444;
-      padding: 5px;
+      padding: 8px 5px;
       text-align: center;
+      white-space: nowrap;
     }
-    th.description-col, td.description-col {
-      width: 30%;
-    }
-    th:not(.description-col), td:not(.description-col) {
-      width: calc(70% / 6);
+    th {
+      background-color: #ff5722;
+      color: #fff;
     }
     input[type="number"] {
-      width: 60px;
       -moz-appearance: textfield;
     }
     input[type="number"]::-webkit-outer-spin-button,
@@ -66,9 +65,6 @@
       align-items: center;
       margin-bottom: 20px;
       gap: 10px;
-    }
-    .controls.visible {
-      display: flex;
     }
     .kit-price-input {
       flex-grow: 1;
@@ -108,6 +104,7 @@
 
   <script>
     const knownSingleItems = ["brake pads", "brake rotors"];
+    let currentParts = [];
 
     document.getElementById("kitInput").addEventListener("input", () => {
       processInput();
@@ -124,8 +121,6 @@
       return qty;
     }
 
-    let currentParts = [];
-
     function processInput() {
       const input = document.getElementById("kitInput").value.trim().split(/\n+/);
       currentParts = [];
@@ -141,8 +136,12 @@
           currentParts.push({ qty, desc, partNum, price: 0, returned: 0 });
         }
       });
+      if (currentParts.length > 0) {
+        document.getElementById("controls").style.display = "flex";
+      } else {
+        document.getElementById("controls").style.display = "none";
+      }
       renderTable(currentParts);
-      document.getElementById("controls").classList.toggle("visible", currentParts.length > 0);
     }
 
     function renderTable(parts) {
@@ -151,7 +150,7 @@
           <thead>
             <tr>
               <th>Qty</th>
-              <th class="description-col">Description</th>
+              <th style="width: 30%">Description</th>
               <th>Part #</th>
               <th>Unit Price ($)</th>
               <th>Returned Qty</th>
@@ -166,7 +165,7 @@
         tableHTML += `
           <tr>
             <td><input type="number" value="${part.qty}" onchange="update(${index})" id="qty-${index}"></td>
-            <td class="description-col">${part.desc}</td>
+            <td>${part.desc}</td>
             <td>${part.partNum}</td>
             <td><input type="number" placeholder="0" onchange="update(${index})" id="price-${index}"></td>
             <td><input type="number" placeholder="0" onchange="update(${index})" id="returned-${index}"></td>
@@ -178,7 +177,7 @@
 
       tableHTML += `</tbody></table>`;
       document.getElementById("tableContainer").innerHTML = tableHTML;
-      updateTotal();
+      calculateRefunds();
     }
 
     function update(index) {
@@ -210,10 +209,6 @@
       document.getElementById("refundTotal").textContent = `Total Refund: $${totalRefund.toFixed(2)}`;
     }
 
-    function updateTotal() {
-      calculateRefunds();
-    }
-
     function toggleReturn(index) {
       const checkbox = document.getElementById(`check-${index}`);
       const returnedInput = document.getElementById(`returned-${index}`);
@@ -230,7 +225,7 @@
       document.getElementById("kitPrice").value = "";
       document.getElementById("tableContainer").innerHTML = "";
       document.getElementById("refundTotal").textContent = "";
-      document.getElementById("controls").classList.remove("visible");
+      document.getElementById("controls").style.display = "none";
     }
   </script>
 </body>
