--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
   <div class="controls" id="controls">
     <div class="kit-price-input">
       <label for="kitPrice">Full Kit Price ($):</label>
-      <input type="number" id="kitPrice" placeholder="Enter full kit price">
+      <input type="number" id="kitPrice" placeholder="Enter full kit price" onchange="calculateRefunds()">
     </div>
     <button onclick="clearAll()">Clear All</button>
   </div>
